# smplx_from_skeleton_tracking_ROS2

./: .gitignore  README.md
body_msgs/: CMakeLists.txt  package.xml
body_msgs/msg/: BodyData.msg  Keypoint.msg
smpl_tracking_node/: CMakeLists.txt  package.xml
smpl_tracking_node/launch/: bag_recorder.launch.py  smpl_tracking.launch.py
smpl_tracking_node/scripts/: betas_optmizer.py  body38_to_smpl.py  body_json_parser.py  losses.py  my_skel_fit.py  open3d_converter.py  skel_fitter.py  smpl_optmizer.py  smpl_params_sender.py  (+4 more)
virtual_fixture/: CMakeLists.txt  package.xml  virtual_fixture.py
virtual_fixture/launch/: virtual_fixture.launch.py
virtual_fixture/rviz/: rviz_config.rviz
virtual_fixture/scripts/: align_data.py  closest_on_triangle.py  location.py  materials.py  math_utils.py  minimum.py  rib_boundary.py  test_QP.py  utils.py  vf_pointcloud.py  virtual_fixture.py  virtual_fixture_test.py  visualize_model.py
virtual_fixture/skel_regions/: 2.txt  3.txt  full_torax.txt  full_torax_no_spine.txt  rib2_l_down.txt  rib2_l_up.txt  rib2_r_down.txt  rib2_r_up.txt  rib3_l_down.txt  rib3_l_up.txt  rib3_r_down.txt  rib3_r_up.txt  rib4_l_down.txt  rib4_l_up.txt  rib4_r_down.txt  rib4_r_up.txt  rib5_l_down.txt  rib5_l_up.txt  rib5_r_down.txt  rib5_r_up.txt  rib6_l_down.txt  rib6_l_up.txt  rib6_r_down.txt  rib6_r_up.txt  rib7_l_down.txt  rib7_l_up.txt  rib7_r_down.txt  rib7_r_up.txt  rib_2_r_down.txt  rib_2_r_up.txt  rib_3_l_down.txt  rib_3_l_up.txt  rib_3_r_down.txt  rib_3_r_up.txt  upper_body_frontal.txt
virtual_fixture_msgs/: CMakeLists.txt  package.xml
(+1 files in other folders)
